--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
    <div class="chamada-texto">
         <h1>Infiltrado</h1>
-        <p>#homem-aranha</p>
+        <p>#infiltrado</p>
     </div>
 
     <div>
