--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>filmes</header>
    
-    <section>
+    <section class="chamada">
     
    <div class="chamada-texto">
           <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
