--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://youtu.be/pyeJE7wmL9s?si=0RJVi373OmHSbeWL">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            <a href="https://youtu.be/P273sRlm4tM?si=M16tdaVUvqXynYTX">
+                <img src="https://images.app.goo.gl/dSEvZXEtK7xwYhc19" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
                 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
